--- a/ffmpeg_audio/Bluetooth/mainwindow.ui
+++ b/ffmpeg_audio/Bluetooth/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1083</width>
+    <height>625</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,31 +24,52 @@
     <item row="1" column="0">
      <widget class="QWidget" name="widget" native="true">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="2">
-        <widget class="QPushButton" name="pushButton_3">
+       <item row="1" column="4">
+        <widget class="QPushButton" name="pushButton_5">
          <property name="text">
-          <string>播放</string>
+          <string>暂停</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="pushButton_2">
-         <property name="text">
-          <string>停止记录</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
+       <item row="1" column="0">
         <widget class="QPushButton" name="pushButton">
          <property name="text">
           <string>开始记录</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
+       <item row="1" column="3">
         <widget class="QPushButton" name="pushButton_4">
          <property name="text">
           <string>解码</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>播放</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="text">
+          <string>停止记录</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="5">
+        <widget class="QPushButton" name="pushButton_6">
+         <property name="text">
+          <string>快进</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
@@ -62,7 +83,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1083</width>
      <height>21</height>
     </rect>
    </property>
